--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "babel src -d lib",
     "lint": "standard \"src/*.js\" --fix | snazzy"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/unshift/pdf-embed.git"
+  },
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.6",
